# riptide

./: .gitignore  Anchor.toml  package-lock.json  package.json
app/: docker-compose.yml
app/cranker/: package.json
app/cranker/src/: index.ts  riptide.json
app/merchant-be/: .gitignore  package-lock.json  package.json  tsconfig.json
app/merchant-be/src/: index.ts
app/merchant-fe/: .env  package-lock.json  package.json  tailwind.config.js
app/merchant-fe/src/: App.tsx  app.scss  index.css  index.html  index.tsx  riptide.json  token_airdrop.json
app/merchant-fe/src/components/: BackLink.tsx  Button.tsx  CampaignDetailsSection.tsx  CampaignStatsSection.tsx  CircleDecoration.tsx  ConfirmModal.tsx  CreateCampaign.tsx  Dropdown.tsx  Heading.tsx  Hr.tsx  InfoButton.tsx  InfoMessage.tsx  Modal.tsx  NavLink.tsx  NumberInput.tsx  SectionHeading.tsx  Spinner.tsx  Themes.ts  ToggleButton.tsx  Toggler.tsx  Wizard.tsx  globalStyles.ts  useDarkMode.tsx
app/merchant-fe/src/contexts/: AuthProvider.tsx  CampaignCacheProvider.tsx  ConfigProvider.tsx  ConnectionProvider.tsx  DarkModeProvider.tsx  EndpointProvider.tsx  ErrorReportingProvider.tsx  ProgramProvider.tsx  ThemeProvider.tsx
app/merchant-fe/src/hooks/: useAuth.ts  useCampaignCache.ts  useConfig.tsx  useDarkMode.tsx  useEndpoint.tsx  useErrorReporting.ts  useLocalStorage.tsx  usePayment.tsx  useProgram.ts  useProvider.tsx  (+1 more)
app/point-of-sale/: .gitignore  package.json
app/point-of-sale/src/: index.html
programs/riptide/: Cargo.toml
programs/riptide/src/: account.rs  context.rs  lib.rs
tests/: riptide.ts
(+28 files in other folders)
